Finished the whole task with working docker and jenkins files